test/classes/initializers/errors/errHandling/initWithTry2.good
initWithTry2.chpl:7: In initializer:
initWithTry2.chpl:9: error: Error handling structures are not yet allowed in initializers
